Add meta description to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Frontend Developer especializado en convertir ideas creativas en experiencias web impactantes. Experto en interfaces fluidas y responsivas, he liderado proyectos desde aplicaciones interactivas hasta sitios de comercio electrónico. Descubre en mi portafolio cómo fusiono diseño y código para soluciones web únicas y memorables."
+    />
     <link
       rel="shortcut icon"
       href="./images/MdiCircle.png"
