Add Open Graph meta tags for website sharing

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bryan Quintana</title>
+    <meta property="og:image" content="./images/website.webp" />
+    <meta property="og:url" content="https://bryanquintana.vercel.app/" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
