Add Facebook and Twitter meta tags for improved social media sharing

--- a/index.html
+++ b/index.html
@@ -13,9 +13,30 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bryan Quintana</title>
-    <meta property="og:image" content="./images/website.webp" />
+
+    <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://bryanquintana.vercel.app/" />
     <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bryan Quintana" />
+    <meta
+      property="og:description"
+      content="Frontend Developer especializado en convertir ideas creativas en experiencias web impactantes. Experto en interfaces fluidas y responsivas, he liderado proyectos desde aplicaciones interactivas hasta sitios de comercio electrónico. Descubre en mi portafolio cómo fusiono diseño y código para soluciones web únicas y memorables."
+    />
+    <meta property="og:image" content="./images/website.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="bryanquintana.vercel.app" />
+    <meta property="twitter:url" content="https://bryanquintana.vercel.app/" />
+    <meta name="twitter:title" content="Bryan Quintana" />
+    <meta
+      name="twitter:description"
+      content="Frontend Developer especializado en convertir ideas creativas en experiencias web impactantes. Experto en interfaces fluidas y responsivas, he liderado proyectos desde aplicaciones interactivas hasta sitios de comercio electrónico. Descubre en mi portafolio cómo fusiono diseño y código para soluciones web únicas y memorables."
+    />
+    <meta
+      name="twitter:image"
+      content="https://opengraph.b-cdn.net/production/documents/1d145e85-20a0-4cc5-bd3b-19fc42a7c3c3.png?token=JtK3H9vRM9V5dZW9tBqn3PGasjbHgbRmlR387s4FyLU&height=188&width=330&expires=33242194744"
+    />
   </head>
   <body>
     <div id="root"></div>
