Update og:image meta tag with new URL

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
       property="og:description"
       content="Frontend Developer especializado en convertir ideas creativas en experiencias web impactantes. Experto en interfaces fluidas y responsivas, he liderado proyectos desde aplicaciones interactivas hasta sitios de comercio electrónico. Descubre en mi portafolio cómo fusiono diseño y código para soluciones web únicas y memorables."
     />
-    <meta property="og:image" content="./images/website.png" />
+    <meta
+      property="og:image"
+      content="https://opengraph.b-cdn.net/production/documents/1d145e85-20a0-4cc5-bd3b-19fc42a7c3c3.png?token=JtK3H9vRM9V5dZW9tBqn3PGasjbHgbRmlR387s4FyLU&height=188&width=330&expires=33242194744"
+    />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
